vitrail-sqlite-macros/tests/ui/fail/composite_unique_unknown_field.stderr
error: unknown unique field `missing_field`
  --> tests/ui/fail/composite_unique_unknown_field.rs:13:28
   |
13 |         @@unique([post_id, missing_field])
   |                            ^^^^^^^^^^^^^
